--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="stopwatch">
-        <h1 id="displayTime">00:00:00</h1>
-        <div class="button">
-            <img src="images/stop.png" alt="">
-            <img src="images/start.png" alt="">
-            <img src="images/reset.png" alt="">
-        </div>
+    <div id="timeContainer">
+        <div id="timeDisplay">00:00:00</div>
+        <button id = "startBtn" class="timerBtn">Start</button>
+        <button id="stopBtn" class="timerBtn">Stop</button>
+        <button id="resetBtn" class="timerBtn">Reset</button>
     </div>
         <script src="index.js"></script>
 </body>
